Make styling and class name changes to coffee to go and bean point secions to align content correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header {
     position: absolute;
     top: 200px;
     bottom: 165px;
-    left: 150px;
+    left: 250px;
 }
 
 #hero-h1{
@@ -72,8 +72,8 @@ header {
 
 /* ----------------------------- Coffee to Go section */
 
-.section {
-    padding: 60px 0;
+.coffee-to-go {
+    padding: 80px 0;
 }
 
 .h2-heading-style { /* Apply across all H2s */
@@ -119,9 +119,8 @@ header {
     font-size: 0;
 }
 
-
 /* ----------------------------- Bean Points section */
 
 .bean-points {
-    padding: 100px 0 0 0;
+    padding: 80px 0;
 }
